# gh-momentum

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
gh_momentum/: __init__.py  cli.py  detector.py  github_api.py  mcp_server.py
repo_radar/: __init__.py  cli.py  detector.py  github_api.py  mcp_server.py
tests/: test_gh_momentum.py  test_repo_radar.py
