[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-radar"
version = "0.1.0"
description = "Surface GitHub repos gaining traction fast, before they hit the front page."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "josda" }]
keywords = ["github", "trending", "repositories", "momentum", "discovery", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "mcp>=1.0"]

[project.scripts]
repo-radar = "repo_radar.cli:main"
repo-radar-mcp = "repo_radar.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Dheightsan/repo-radar"
Issues = "https://github.com/Dheightsan/repo-radar/issues"

[tool.setuptools]
packages = ["repo_radar"]
