[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-momentum"
version = "0.1.0"
description = "Surface GitHub repos gaining traction fast, before they hit the front page."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "josda" }]
keywords = ["github", "trending", "repositories", "momentum", "discovery", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
# The MCP SDK requires Python >=3.10; the core gh-momentum stays 3.9-compatible.
# On Python 3.9 this extra installs nothing and the MCP server is unavailable.
mcp = ["mcp>=1.0; python_version >= '3.10'"]
dev = ["pytest>=7.0", "mcp>=1.0; python_version >= '3.10'"]

[project.scripts]
gh-momentum = "gh_momentum.cli:main"
gh-momentum-mcp = "gh_momentum.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Dheightsan/gh-momentum"
Issues = "https://github.com/Dheightsan/gh-momentum/issues"

[tool.setuptools]
packages = ["gh_momentum"]
